--- a/resource.qrc
+++ b/resource.qrc
@@ -1,5 +1,9 @@
 <RCC>
-    <qresource prefix="/">
+    <qresource prefix="/myFiles">
         <file>MainWindowApps.qml</file>
+    </qresource>
+    <qresource prefix="/source/img">
+        <file>source/img/visibilityIcon.png</file>
+        <file>source/img/logo.jpg</file>
     </qresource>
 </RCC>
