--- a/resource.qrc
+++ b/resource.qrc
@@ -1,9 +1,26 @@
 <RCC>
     <qresource prefix="/myFiles">
         <file>MainWindowApps.qml</file>
+        <file>MainMenuWindow.qml</file>
+        <file>MiniAppsWindow.qml</file>
+        <file>PopularWindow.qml</file>
+        <file>Top10Window.qml</file>
+        <file>NewWindow.qml</file>
+        <file>CommunicationWindow.qml</file>
+        <file>QuestionnairesWindow.qml</file>
+        <file>AboutWindow.qml</file>
+        <file>PolicyWindow.qml</file>
+        <file>EditProfileWindow.qml</file>
     </qresource>
     <qresource prefix="/source/img">
         <file>source/img/visibilityIcon.png</file>
         <file>source/img/logo.jpg</file>
+        <file>source/img/mainMenuIcon.png</file>
+        <file>source/img/miniAppsIcon.png</file>
+        <file>source/img/newIcon.png</file>
+        <file>source/img/popularIcon.png</file>
+        <file>source/img/questionnairesIcon.png</file>
+        <file>source/img/top10Icon.png</file>
+        <file>source/img/communicationIcon.png</file>
     </qresource>
 </RCC>
